--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@babel/traverse": "^7.26.10",
     "@babel/types": "^7.26.10",
     "cors": "^2.8.5",
-    "express": "^4.18.3"
+    "dotenv": "^16.4.7",
+    "express": "^4.18.3",
+    "mongodb": "^6.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
